--- a/EmlakOfisi/Web.config
+++ b/EmlakOfisi/Web.config
@@ -11,8 +11,11 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EmlakOfisi-20210505035103.mdf;Initial Catalog=aspnet-EmlakOfisi-20210505035103;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+
+    <add name="EmlakOfisiContext" connectionString="data source=localhost; initial catalog=EmlakOfisiDb;persist security info=True; Integrated Security=SSPI;"
+       providerName="System.Data.SqlClient" />
+
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
